--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MyRequests" />
+        <activity android:name=".C_completeR" />
+        <activity android:name=".C_incompleteR" />
+        <activity android:name=".C_canceledR"></activity>
     </application>
 
 </manifest>
